[gd_scene load_steps=5 format=3 uid="uid://df73jwxyyl64o"]

[ext_resource type="Script" uid="uid://begcex3rwt0lr" path="res://src/GameScenes/GameManager.gd" id="1_2rdtk"]
[ext_resource type="PackedScene" uid="uid://uci32s7kdqss" path="res://src/GameScenes/table_normale.tscn" id="1_aptux"]
[ext_resource type="PackedScene" uid="uid://c4fbw2wyq73q1" path="res://src/GameScenes/shop.tscn" id="2_3vl0c"]
[ext_resource type="PackedScene" uid="uid://dy74rt86qrt0a" path="res://src/GameScenes/table_topdown.tscn" id="3_qhh1e"]

[node name="MainGame" type="Node"]
script = ExtResource("1_2rdtk")

[node name="TableNormale" parent="." instance=ExtResource("1_aptux")]

[node name="Shop" parent="." instance=ExtResource("2_3vl0c")]
visible = false

[node name="TableTopdown" parent="." instance=ExtResource("3_qhh1e")]
visible = false

[node name="score2" type="Label" parent="."]
offset_left = 33.0
offset_top = 27.0
offset_right = 319.0
offset_bottom = 152.0
theme_override_font_sizes/font_size = 50
text = "XX/XX
money
"

[connection signal="play" from="TableNormale" to="." method="_on_table_normale_play"]
[connection signal="shop" from="TableNormale" to="." method="_on_table_normale_shop"]
[connection signal="on_bought" from="Shop" to="." method="_on_shop_on_bought"]
